--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,8 @@ htmlcov/
 # Jupyter Notebook
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
-
+*.ipynb
+explorations/
 # Local development
 *.log
 .DS_Store
